--- a/index.html
+++ b/index.html
@@ -307,10 +307,10 @@ $(document).ready(function () {
 <div id="hello-there" class="section level1">
 <h1><strong>Hello there!</strong></h1>
 <p>My name is Clayton Snyder.</p>
-<p>I’m 27 years old, quickling reaching 28. I was born and raised in Brooklyn, New York. After a brief stint as an ex-patriot (in Montreal, Canada) I moved back to my hometown of Brooklyn, where I currently reside.</p>
+<p>I’m 27 years old, quickling reaching 28. I was born and raised in Brooklyn, New York. After a brief stint as an ex-patriot (in Montreal, Canada) I ended up moving back to my hometown of Brooklyn.</p>
 <p>I enjoy watching movies (especially documentaries and horror), playing video games, basketball, billiards, and I listen to all genres of music (<a href="https://khruangbin.bandcamp.com/">Khruangbin</a> being my current favorite).</p>
-<p>I absolutely love pizza and being from Brooklyn I have very strong opinions about where to find the best pizza (it’s <a href="https://www.difarapizzany.com/">here</a>).</p>
-<p>I am currently in school for an MPH in Biostatistics at Columbia University. So far so good!</p>
+<p>I absolutely love pizza, and being from Brooklyn I have strong opinions about where to find the best pizza (it’s <a href="https://www.difarapizzany.com/">here</a>).</p>
+<p>I am currently in school for an MPH in Biostatistics at Columbia University, which is going so far so good!</p>
 <p><img src="images/mailman.jpg" /></p>
 <p>If you want, you can learn more about my educational and professional experiences <a href="about.html">here</a></p>
 </div>
