--- a/index.html
+++ b/index.html
@@ -277,6 +277,9 @@ $(document).ready(function () {
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
+  <a href="graphs.html">Brooklyn Food Dashboard</a>
+</li>
+<li>
   <a href="about.html">About</a>
 </li>
 <li>
